--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "main": "expo-router/entry",
     "version": "1.0.0",
     "scripts": {
-      "start": "npx rork start -p 8dx11md504tjqt0q2ncfh --tunnel",
-      "start-web": "npx rork start -p 8dx11md504tjqt0q2ncfh --web --tunnel",
-      "start-web-dev": "DEBUG=expo* npx rork start -p 8dx11md504tjqt0q2ncfh --web --tunnel",
-      "build": "npx rork build",
-      "deploy": "npx rork build && netlify deploy --prod"
+      "start": "expo start",
+      "start-web": "expo start --web",
+      "start-web-dev": "expo start --web",
+      "build": "expo export --platform web",
+      "deploy": "expo export --platform web && netlify deploy --prod"
     },
     "dependencies": {
       "@expo/vector-icons": "^14.1.0",
