--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "typescript": "~5.8.3",
       "vite": "^5.0.0",
       "@vitejs/plugin-react": "^4.2.1",
+      "@vitejs/plugin-react-native": "^0.11.0",
       "@babel/core": "^7.25.2",
       "@expo/ngrok": "^4.1.0",
       "@types/react": "~19.0.10"
@@ -52,7 +53,11 @@
       "@babel/core": "^7.25.2",
       "@expo/ngrok": "^4.1.0",
       "@types/react": "~19.0.10",
-      "typescript": "~5.8.3"
+      "typescript": "~5.8.3",
+      "vite": "^5.0.0",
+      "@vitejs/plugin-react": "^4.2.1",
+      "@vitejs/plugin-react-native": "^0.11.0",
+      "react-refresh": "^0.14.0"
     },
     "private": true
   }
