--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "expo-app",
-    "main": "expo-router/entry",
+    "name": "examapp",
     "version": "1.0.0",
     "scripts": {
       "start": "vite",
@@ -9,56 +8,23 @@
       "preview": "vite preview"
     },
     "dependencies": {
-      "@expo/vector-icons": "^14.1.0",
-      "@nkzw/create-context-hook": "^1.1.0",
-      "@react-native-async-storage/async-storage": "2.1.2",
-      "@react-navigation/native": "^7.1.6",
-      "expo": "^53.0.4",
-      "expo-blur": "~14.1.4",
-      "expo-constants": "~17.1.4",
-      "expo-document-picker": "~13.1.6",
-      "expo-font": "~13.3.0",
-      "expo-haptics": "~14.1.4",
-      "expo-image": "~2.1.6",
-      "expo-image-picker": "~16.1.4",
-      "expo-linear-gradient": "~14.1.4",
-      "expo-linking": "~7.1.4",
-      "expo-location": "~18.1.4",
-      "expo-router": "~5.0.3",
-      "expo-splash-screen": "~0.30.7",
-      "expo-status-bar": "~2.2.3",
-      "expo-symbols": "~0.4.4",
-      "expo-system-ui": "~5.0.6",
-      "expo-web-browser": "~14.1.6",
-      "lucide-react-native": "^0.475.0",
-      "nativewind": "^4.1.23",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "react-native": "0.79.1",
-      "react-native-gesture-handler": "~2.24.0",
-      "react-native-safe-area-context": "5.3.0",
-      "react-native-screens": "~4.10.0",
-      "react-native-svg": "15.11.2",
-      "react-native-web": "^0.20.0",
-      "zustand": "^5.0.6",
-      "typescript": "~5.8.3",
-      "vite": "^5.0.0",
-      "@vitejs/plugin-react": "^4.2.1",
-      "@vitejs/plugin-react-native": "^0.11.0",
-      "@babel/core": "^7.25.2",
-      "@expo/ngrok": "^4.1.0",
-      "@types/react": "~19.0.10"
+      "react-router-dom": "^6.21.3",
+      "@mui/material": "^5.15.6",
+      "@emotion/react": "^11.11.3",
+      "@emotion/styled": "^11.11.0",
+      "@types/react": "^18.2.48",
+      "@types/react-dom": "^18.2.18",
+      "typescript": "^5.3.3"
     },
     "devDependencies": {
-      "@babel/core": "^7.25.2",
-      "@expo/ngrok": "^4.1.0",
-      "@types/react": "~19.0.10",
-      "typescript": "~5.8.3",
       "vite": "^5.0.0",
       "@vitejs/plugin-react": "^4.2.1",
-      "@vitejs/plugin-react-native": "^0.11.0",
-      "react-refresh": "^0.14.0"
+      "@types/node": "^20.10.6",
+      "@types/react": "^18.2.48",
+      "@types/react-dom": "^18.2.18",
+      "typescript": "^5.3.3"
     },
     "private": true
   }
-  
