--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
-  command = "npm install --legacy-peer-deps && npm run build"
-  publish = "dist"
+  command = "npm install && npm run build"
+  publish = "build"
 
 [build.environment]
   NODE_ENV = "production"
